some weird issues with header not aligning properly fixed. -fixed by adding fixed widths to the logo_area

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ a{
 
 #logo_area{
 	margin-right: 480px;
+	width: 170px;
 }
 
 #logo_over{
